Rearrange & Add Assets
- Move existing assets (like configs) to their PCSX2-relative folder locations (for better organization).
- Add logo image assets.
- Change bfmc_icon from a PNG to an ICO (as required for GUI).
- Installer script still WIP.

--- a/gamesettings/gamesettings.ini
+++ b/gamesettings/gamesettings.ini
@@ -16,7 +16,7 @@ pcrtc_offsets = false
 pcrtc_overscan = false
 disable_interlace_offset = false
 IntegerScaling = false
-upscale_multiplier = 3
+upscale_multiplier = RESOLUTION_VAL
 mipmap_hw = 2
 filter = 2
 TriFilter = 2
