--- a/inis/PCSX2.ini
+++ b/inis/PCSX2.ini
@@ -14,7 +14,7 @@ InputProfiles = inputprofiles
 
 [MemoryCards]
 Slot1_Enable = true
-Slot1_Filename = Mcd001.ps2
+Slot1_Filename = BFMCspy.ps2
 
 
 [AutoUpdater]
