Fix variable typos & add texture replace gamesetting

--- a/gamesettings/gamesettings.ini
+++ b/gamesettings/gamesettings.ini
@@ -41,6 +41,7 @@ UserHacks_SkipDraw_End = 3
 CropRight = 1
 OsdShowFPS = true
 FramerateNTSC = 99.99
+LoadTextureReplacements = false
 
 
 [EmuCore]
